<resources>
    <string name="app_name">Viagens</string>
    <string name="label_especiais">Especiais</string>
    <string name="label_brasil">Brasil</string>
    <string name="label_cidade">São paulo</string>
    <string name="label_dias">2 dias</string>
    <string name="label_pacote_viagens">Pacotes de Viagens</string>
    <string name="label_inf_dias">\u0020dias</string>
    <string name="label_inf_dia">\u0020dia</string>
    <string name="info_banner_de_topo">Banner de Topo</string>
    <string name="label_data_periodo">08/12 – 10/12 de 2019</string>
    <string name="preco">R$ 243,99</string>
    <string name="label_preco">Preço</string>
    <string name="button_finalizar_pagamento">Finalizar Pagamento</string>
    <string name="info_detalhe_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="label_valor_da_compra">Valor da compra</string>
    <string name="hitn_numero_cartao">Número do cartão</string>
    <string name="label_pagamento">Pagamento</string>
    <string name="label_mm">MM</string>
    <string name="label_aa">AA</string>
    <string name="label_cvc">CVC</string>
    <string name="label_hint_nome_cartao">Nome no cartão</string>
    <string name="btn_finalizar_compra">Finalizar Compra</string>
    <string name="mascara_nome_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="info_parabens">Parabéns!</string>
    <string name="info_compra_realizda">Compra realizda com sucesso :)</string>
    <string name="info_confira_resumo_compra">Confira o resumo da compra:</string>
</resources>
