<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalhePagamentoActivity">

    <TextView
        android:id="@+id/txt_info_pagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/info_detalhe_pagamento"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_label_pagamento_valor_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/label_valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_info_pagamento" />

    <TextView
        android:id="@+id/txt_pagamento_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/txt_label_pagamento_valor_compra"
        app:layout_constraintTop_toBottomOf="@+id/txt_label_pagamento_valor_compra"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/edt_pagamento_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/hitn_numero_cartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pagamento_preco" />

    <EditText
        android:id="@+id/edt_pagamento_mes_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_mm"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/edt_pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/edt_pagamento_cartao" />

    <EditText
        android:id="@+id/edt_pagamento_ano_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_aa"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/edt_pagamento_cvc_cartao"
        app:layout_constraintStart_toEndOf="@id/edt_pagamento_mes_cartao" />

    <EditText
        android:id="@+id/edt_pagamento_cvc_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/label_cvc"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/edt_pagamento_cartao"
        app:layout_constraintTop_toBottomOf="@id/edt_pagamento_cartao" />

    <EditText
        android:id="@+id/edt_pagamento_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="@string/mascara_nome_cartao"
        android:hint="@string/label_hint_nome_cartao"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/edt_pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@+id/edt_pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@+id/edt_pagamento_cvc_cartao" />

    <Button
        android:id="@+id/btn_pagamento_finalizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/button_redondo"
        android:text="@string/btn_finalizar_compra"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pagamento_nome_cartao" />

</android.support.constraint.ConstraintLayout>