<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResumoCompraActivity">

    <ImageView
        android:id="@+id/img_compra_parabens"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_green_light" />

    <TextView
        android:id="@+id/txt_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/info_parabens"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_compra_parabens"
        app:layout_constraintEnd_toEndOf="@+id/img_compra_parabens"
        app:layout_constraintStart_toStartOf="@+id/img_compra_parabens"
        app:layout_constraintTop_toTopOf="@+id/img_compra_parabens"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_compra_realizada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/info_compra_realizda"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_parabens"
        app:layout_constraintStart_toStartOf="@+id/txt_parabens"
        app:layout_constraintTop_toBottomOf="@+id/txt_parabens" />

    <TextView
        android:id="@+id/txt_conferir_resumo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:text="@string/info_confira_resumo_compra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_compra_parabens" />

    <ImageView
        android:id="@+id/img_resumo_compra_banner_pacote"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_conferir_resumo"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/txt_resumo_compra_cidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="@string/label_cidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_resumo_compra_banner_pacote" />

    <TextView
        android:id="@+id/txt_resumo_compra_periodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/label_data_periodo"
        app:layout_constraintStart_toStartOf="@+id/txt_resumo_compra_cidade"
        app:layout_constraintTop_toBottomOf="@+id/txt_resumo_compra_cidade" />

    <TextView
        android:id="@+id/txt_resumo_compra_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$ 243,99"
        app:layout_constraintStart_toStartOf="@+id/txt_resumo_compra_periodo"
        app:layout_constraintTop_toBottomOf="@+id/txt_resumo_compra_periodo" />

</android.support.constraint.ConstraintLayout>