<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_topo"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_purple"
        android:contentDescription="@string/info_banner_de_topo" />

    <TextView
        android:id="@+id/txt_especiais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/label_especiais"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/img_topo"
        app:layout_constraintEnd_toEndOf="@id/img_topo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/img_topo"
        app:layout_constraintTop_toTopOf="@id/img_topo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_brasil"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/txt_especiais"
        app:layout_constraintTop_toBottomOf="@+id/txt_especiais" />

    <ListView
        android:id="@+id/lv_pacotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/item_adapter_pacotes"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_topo"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>